--- a/index.html
+++ b/index.html
@@ -7,106 +7,159 @@
 
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/main.css">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
   <!-- TODO: replace with your personal Font Awesome CDN link -->
-  <script src="https://use.fontawesome.com/???.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
   <header>
-    <nav>
-      <ul>
-        <li><a href="#">Hats</a></li>
-        <li><a href="#">Gloves</a></li>
-        <li><a href="#">Scarves</a></li>
-        <li class="cart-info">
-          <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-        </li>
-      </ul>
-    </nav>
+    <div class="logo">
+    <nav class="navbar navbar-inverse navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
 
-    <img src="images/logo-scarfcat.png" alt="dapper cartoon cat wearing a scarf">
-    <h1>
-      <span class="logo-w">W</span>inter
-      <span class="logo-w">W</span>ear
-      <span class="logo-w">W</span>arehouse
-    </h1>
+          <img src="images/logo-scarfcat.png" alt="dapper cartoon cat wearing a scarf">
+          <h1> Winter Wear Warehouse</h1>
+        </div>
+        <div id="navbar3" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#">Scarves</a></li>
+            <li><a href="#">Glovles</a></li>
+            <li><a href="#">Hats</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">Scarves</a></li>
+                <li><a href="#">Gloves</a></li>
+                <li><a href="#">Hats</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+
+
   </header>
 
   <main>
+    <div class="row">
+      <div class="col-md-3 push-md-9">
     <aside>
       <form>
-        <label>Sign up for our mailing list:
+        <label>Sign up for our mailing list:<br>
+
           <input type="email" name="email">
         </label>
-
+       <br>
         <input type="submit" value="Submit">
       </form>
     </aside>
-
+</div>
+<div class="col-md-9 pull-md-3">
     <section>
       <h2>Scarves</h2>
 
-      <div class="item-container">
-        <div>
+      <div class="row">
+  <div class="col-sm-5 col-md-6">
           <h3>Reversible Plaid</h3>
           <img src="images/reversible-plaid.jpg" alt="reversible plaid scarf">
-          <p>Two classic patterns in one great look: This supersoft and cozy reversible scarf instantly doubles your street-style cred. 100% acrylic.</p>
-          <p>26.99</p>
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#colps">$26.99<br>Details</button>
+            <div id="colps" class="collapse">
+                    <p>Two classic patterns in one great look: This supersoft and cozy reversible scarf instantly doubles your street-style cred. 100% acrylic.</p>
+                    <p>26.99</p>
+                  </div>
         </div>
 
-        <div>
+         <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
           <h3>Fringed Plaid</h3>
           <img src="images/fringed-plaid.jpeg" alt="fringed plaid scarf">
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#colps1">$18.99<br>Details</button>
+            <div id="colps1" class="collapse">
           <p>Generously sized, extra soft and featuring a dazzling fringe, this scarf is rendered in a versatile gray, black and white plaid. Expertly beat the cold with style. 100% acrylic.</p>
           <p>18.99</p>
         </div>
-
-        <div>
+        </div>
+</div>
+        <div class="row">
+  <div class="col-sm-5 col-md-6">
           <h3>Multi Color</h3>
           <img src="images/multi-color.jpeg" alt="multi color scarf">
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#colps2">$22.99<br>Details</button>
+            <div id="colps2" class="collapse">
           <p>The Who What Where Oversize Color-Block Square Scarf is big, bold, and designed to twist and wrap any way you wish. All the colors of the season are harmonized in this oversize accent, so you can adjust to contrast or match your outfit; soft and lush, it’s your stylish standoff against cold AC and unexpected fall breezes. 100% acrylic.</p>
           <p>22.99</p>
         </div>
-
-        <div>
+</div>
+        <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
           <h3>Northern Lights</h3>
           <img src="images/northern-lights.jpg" alt="northern lights scarf">
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#colps3">$29.99<br>Details</button>
+            <div id="colps3" class="collapse">
           <p>Handmade by women in Agra, sales provide medical and educational support in this remote area of India. Crinkly 100% cotton.</p>
           <p>29.99</p>
         </div>
+        </div>
+      </div>
 
-        <div>
+      <div class="row">
+<div class="col-sm-5 col-md-6">
           <h3>Ombre Infinity</h3>
           <img src="images/ombre-infinity.jpg" alt="ombre infinity scarf">
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#colps4">$11.99<br>Details</button>
+            <div id="colps4" class="collapse">
           <p>A dip-dye effect adds color and dimension to a cozy infinity scarf featuring a soft, chunky knit. 100% acrylic.</p>
           <p>11.99</p>
         </div>
-
-        <div>
+</div>
+      <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
           <h3>Ashby Twill</h3>
           <img src="images/twill.jpg" alt="ashby twill scarf">
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#colps5">$18.99<br>Details</button>
+            <div id="colps5" class="collapse">
           <p>Faribault brings you the Ashby Twill Scarf in Natural. Woven with a 'broken' twill technique, the Ashby Twill Scarf has a slight zigzag texture. Made in USA, this timeless scarf is crafted with luxurious merino wool and finished with heather gray fringe. 100% Merino wool.</p>
           <p>70.99</p>
         </div>
-
-        <div>
+</div>
+<div class="row">
+<div class="col-sm-5 col-md-6">
           <h3>Wool Cable Knit</h3>
           <img src="images/wool-cable.jpeg" alt="wool cable knit scarf">
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#colps6">$49.99<br>Details</button>
+            <div id="colps6" class="collapse">
           <p>Warm yourself with this women's natural cable knit scarf, crafted from 100% Merino wool. Imported.</p>
           <p>49.99</p>
         </div>
+      </div>
 
-        <div>
+        <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
           <h3>Etro Paisley-Print Silk</h3>
           <img src="images/etro.png" alt="etro paisley print silk scarf">
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#colps7">$26.99<br>Details</button>
+            <div id="colps7" class="collapse">
           <p>Luxurious silk scarf with subtle paisley pattern. 100% silk.</p>
           <p>26.99</p>
         </div>
-
       </div>
+</div>
+</div>
     </section>
+  </div>
+</div>
   </main>
   <script type="text/javascript" src="js/script.js"></script>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </body>
 </html>
