--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     <div class="row">
       <div class="col-md-3 push-md-9">
     <aside>
-      <form>
-        <label>Sign up for our mailing list:<br>
+      <form id="email_form">
+        <label>Sign up here:
 
           <input type="email" name="email">
         </label>
        <br>
         <input type="submit" value="Submit">
-      </form>
+</form>
     </aside>
 </div>
 <div class="col-md-9 pull-md-3">
