--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <li><a href="#">Hats</a></li>
               </ul>
             </li>
+            <li><button type="button" class="btn btn-default btn-sm">
+             <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart
+           </button></li>
           </ul>
         </div>
       </div>
