--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               </ul>
             </li>
             <li><button type="button" class="btn btn-default btn-sm">
-             <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart
-           </button></li>
+      <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart
+    </button></li>
           </ul>
         </div>
       </div>
@@ -74,7 +74,10 @@
       <div class="row">
   <div class="col-sm-5 col-md-6">
           <h3>Reversible Plaid</h3>
-          <img src="images/reversible-plaid.jpg" alt="reversible plaid scarf">
+          <img src="images/reversible-plaid.jpg" alt="reversible plaid scarf"
+          srcset="images/reversible-plaid.jpg 200w,
+          images/reversible-plaid.jpg 400w"
+      sizes="(min-width: 600px) 200px, 50vw">
           <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#colps">$26.99<br>Details</button>
             <div id="colps" class="collapse">
                     <p>Two classic patterns in one great look: This supersoft and cozy reversible scarf instantly doubles your street-style cred. 100% acrylic.</p>
@@ -166,3 +169,4 @@
 
 </body>
 </html>
+
