--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
                 <li><a href="#">Hats</a></li>
               </ul>
             </li>
-            <li><button type="button" class="btn btn-default btn-sm">
-      <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart
-    </button></li>
+           <button type="button" class="btn btn-default btn-sm">
+    <li><a href="#" id="cart"><i class="fa fa-shopping-cart"></i> shopping-cart <span class="badge">3</span></a>
+    </li>
+ </button>
           </ul>
         </div>
       </div>
